--- a/Sources/WebInspectorKit/WebInspectorUI/Resources/InspectorUI.html
+++ b/Sources/WebInspectorKit/WebInspectorUI/Resources/InspectorUI.html
@@ -12,7 +12,7 @@
             <div class="dom-tree-panel">
                 <div id="dom-tree" class="dom-tree" role="tree" aria-label="DOM tree"></div>
                 <div id="dom-empty" class="dom-empty" hidden>
-                    <p>DOM情報を取得できませんでした。リロードしてください。</p>
+                    <p data-role="empty-message">Unable to load DOM. Please reload.</p>
                 </div>
             </div>
         </section>
