Deemphasize unrendered DOM nodes

--- a/Sources/WebInspectorKit/WebInspectorUI/Resources/InspectorUI.html
+++ b/Sources/WebInspectorKit/WebInspectorUI/Resources/InspectorUI.html
@@ -10,7 +10,7 @@
     <div class="inspector">
         <section class="inspector__content">
             <div class="dom-tree-panel">
-                <div id="dom-tree" class="dom-tree" role="tree" aria-label="DOM tree"></div>
+                <div id="dom-tree" class="dom-tree deemphasize-unrendered" role="tree" aria-label="DOM tree"></div>
                 <div id="dom-empty" class="dom-empty" hidden>
                     <p data-role="empty-message">Unable to load DOM. Please reload.</p>
                 </div>
